<resources>
    <string name="app_name">ft_hangouts</string>
    
    <string name="add_contact_desc">Add Contact</string>
    
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="info_hint">Contextual Info</string>
    
    <string name="save_contact">Save Contact</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    
    <string name="contact_saved">Contact saved successfully</string>
    <string name="contact_updated">Contact updated successfully</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="error_loading">Error loading contact</string>
    <string name="error_enter_name">Please enter a first name</string>
    <string name="error_update_failed">Failed to update contact</string>
    <string name="error_delete_failed">Failed to delete contact</string>
    <string name="contact_full_name">%1$s %2$s</string>
    <string name="last_seen">Last seen: %1$s</string>

    <string name="color_red_title">Red Header</string>
    <string name="color_blue_title">Blue Header</string>
    <string name="color_green_title">Green Header</string>

    <string name="error_update_failed">Failed to update contact</string>
    <string name="error_delete_failed">Failed to delete contact</string>
</resources>