<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Field 1 -->
    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint" />

    <!-- Field 2 -->
    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint" />

    <!-- Field 3 -->
    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_hint" />

    <!-- Field 4 -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint" />

    <!-- Field 5 -->
    <EditText
        android:id="@+id/et_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/info_hint" />

    <!-- Button Fild -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_contact"
        android:layout_gravity="center_horizontal" />

</LinearLayout>